gradle cleanup + setup, all deps and keys added into a project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,33 +1,103 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'jacoco'
+apply from: "$project.rootDir/secretconfig.gradle"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion build_versions.target_sdk
     defaultConfig {
         applicationId "com.lounah.usefulauthwithweather"
-        minSdkVersion 17
-        targetSdkVersion 28
+        minSdkVersion build_versions.min_sdk
+        targetSdkVersion build_versions.target_sdk
         versionCode 1
-        versionName "1.0"
+        versionName "0.1.1 от " + getDate()
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "WEATHER_API_ENDPOINT", "\"https://api.openweathermap.org/\"")
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+    }
+
+    signingConfigs {
+        config {
+            keyAlias signConfigs.keyAlias
+            keyPassword signConfigs.keyPassword
+            storeFile file(signConfigs.storeFile)
+            storePassword signConfigs.storePassword
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
+        debug {
+            multiDexEnabled true
+            minifyEnabled false
+            testCoverageEnabled true
+        }
+        applicationVariants.all { variant ->
+            variant.buildConfigField "String", "WEATHER_API_KEY", "\""+apiKeys.weather+"\""
+        }
+    }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+        }
+    }
+    androidExtensions {
+        experimental = true
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // Base
+    implementation deps.kotlin.stdlib
+    implementation deps.support.app_compat
+    implementation deps.support.support
+    implementation deps.support.design
+    implementation deps.support.constraint
+
+    // VM
+    implementation deps.arch.view_model
+    implementation deps.arch.lifecycle_extension
+
+    // Retrofit
+    implementation deps.retrofit.runtime
+    implementation deps.retrofit.rxadapter
+    implementation deps.retrofit.factory
+
+    // RxJava
+    implementation deps.rx.rxjava
+    implementation deps.rx.rxandroid
+
+    // Dagger
+    implementation deps.dagger.runtime
+    implementation deps.dagger.support
+    kapt deps.dagger.processor
+    kapt deps.dagger.compiler
+
+    // Testing
+    testImplementation deps.tests.junit
+    testImplementation deps.tests.hamcrest
+    testImplementation deps.tests.mockito
+    testImplementation deps.tests.robolectric
+    testImplementation deps.arch_core.testing
+
+    androidTestImplementation deps.tests.espressoContrib
+    androidTestImplementation deps.tests.androidTestRules
+    androidTestImplementation deps.tests.espressoCore
+    androidTestImplementation deps.atsl.runner
+}
+
+static def getDate() {
+    return new Date().format('yyyy/MM/dd')
 }
